# avito-py

./: .gitignore  README.md  pyproject.toml
avito/: __init__.py  avito.py  methods.py  models.py
avito/base/: context_controller.py  methods.py  models.py
avito/schema/auth/: methods.py  models.py
avito/schema/messenger/: black_list.py  methods.py  models.py
avito/schema/rating/: methods.py  models.py
avito/schema/user/: methods.py  models.py
examples/: get_self.py  upload_image.py  webhook.py
