[tool.poetry]
name = "avito"
version = "0.1.0"
description = ""
authors = ["taimast <charlskenno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = { extras = ["speedups"], version = "^3.9.3" }
pydantic = "^2.6.1"
loguru = "^0.7.2"
orjson = "^3.9.14"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
